5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1613_2426.log
== TEST (2019-04-01 17:29:49) 
-- CODE:
t=float(input("tempo: "))
v=float(input("velocidade: "))
d=v*t
gas=d/12
print(float(d))
print(float(gas))
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:30:07) 
-- CODE:
t=float(input("tempo: "))
v=float(input("velocidade: "))
d=v*t
gas=d/12
print(float(d))
print(float(gas))
-- EXECUTION TIME:
0.200178
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:32:22) 
-- CODE:
t=float(input("tempo: "))
v=float(input("velocidade: "))
print(float(v*t)
print(float(d/12))
-- EXECUTION TIME:
0.197474
-- ERROR:
  File "/home/codebench/codes/1613/2426/main.py", line 4
    print(float(d/12))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:32:25) 
-- CODE:
t=float(input("tempo: "))
v=float(input("velocidade: "))
print(float(v*t)
print(float(d/12))
-- ERROR:
File "XXXX", line 4
    print(float(d/12))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:32:57) 
-- CODE:
t=float(input("tempo: "))
v=float(input("velocidade: "))
print(float(v*t)
print(float((v*t)/12))
-- EXECUTION TIME:
0.166129
-- ERROR:
  File "/home/codebench/codes/1613/2426/main.py", line 4
    print(float((v*t)/12))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:33:19) 
-- CODE:
t=float(input("tempo: "))
v=float(input("velocidade: "))
print(float(v*t)
print(float((v*t)/12))
-- ERROR:
File "XXXX", line 4
    print(float((v*t)/12))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:33:40) 
-- CODE:
t=float(input("tempo: "))
v=float(input("velocidade: "))
print(float(v*t))
print(float((v*t)/12))
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:33:44) 
-- CODE:
t=float(input("tempo: "))
v=float(input("velocidade: "))
print(float(v*t))
print(float((v*t)/12))
-- EXECUTION TIME:
0.205979
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
